Whitespace between "page add" and "search input" fix

--- a/sources/stylesheets/editmode.scss
+++ b/sources/stylesheets/editmode.scss
@@ -231,7 +231,6 @@
     position: relative;
     display: inline-block;
     margin-left: 20px;
-    margin-right: 20px;
 
     @include query($tablet-2) {
       position: static;
@@ -288,3 +287,6 @@
     color: rgba($red, .5)
   }
 }
+
+.front-page.edy-editmode .menu-main.menu-front .top-level .edit-btn { margin-right: 20px;}
+.front-page .menu-lang .edit-btn { margin-right: 0 !important;}
